--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "start": "npm run dev",
     "build:prod": "cross-env NODE_ENV=production env_config=prod node build/build.js",
     "build:sit": "cross-env NODE_ENV=production env_config=sit node build/build.js",
     "lint": "eslint --ext .js,.vue src",
@@ -65,7 +66,7 @@
     "friendly-errors-webpack-plugin": "1.6.1",
     "html-webpack-plugin": "2.30.1",
     "node-notifier": "5.1.2",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.8.3",
     "optimize-css-assets-webpack-plugin": "3.2.0",
     "ora": "1.3.0",
     "portfinder": "1.0.13",
