--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "npm run lint"
   },
   "dependencies": {
+    "ajv": "^6.0.0",
     "axios": "0.17.1",
     "clipboard": "1.7.1",
     "codemirror": "5.32.0",
