--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "npm run lint"
   },
   "dependencies": {
+    "vue-croppa": "^1.3.6",
     "ajv": "^6.0.0",
     "axios": "0.17.1",
     "clipboard": "1.7.1",
