--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
     "test": "npm run lint"
   },
   "dependencies": {
-    "vue-quill-editor": "^3.0.6",
-    "vue-croppa": "^1.3.6",
     "ajv": "^6.0.0",
     "axios": "0.17.1",
+    "blueimp-md5": "^2.10.0",
     "clipboard": "1.7.1",
     "codemirror": "5.32.0",
     "element-ui": "2.3.2",
@@ -35,8 +34,10 @@
     "sortablejs": "1.7.0",
     "vue": "2.5.10",
     "vue-count-to": "1.0.13",
+    "vue-croppa": "^1.3.6",
     "vue-i18n": "7.3.2",
     "vue-multiselect": "2.0.8",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "3.0.1",
     "vue-splitpane": "1.0.2",
     "vuedraggable": "2.15.0",
