--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "sortablejs": "1.7.0",
     "vue": "2.5.10",
     "vue-count-to": "1.0.13",
-    "vue-croppa": "^1.3.6",
+    "cropperjs": "1.3.5",
     "vue-i18n": "7.3.2",
     "vue-multiselect": "2.0.8",
     "vue-quill-editor": "^3.0.6",
